@@ -2,6 +2,10 @@
 
 == Master (for 0.1.5)
 
+* bin/fswiki2md: add new line after header
+* bugfix for new line at the end of the stream
+
+
 == Version 0.1.4 [2017-05-31] released
 
 * indent width is modified to 2
